Update 10-advanced-topics